Handle failover behavior for ReshardingRecipientService during abort

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.0.0-rc0, 7.0.18
    • Affects Version/s: None
    • Component/s: None
    • None
    • Cluster Scalability
    • Fully Compatible
    • ALL
    • v7.3, v7.0, v6.0, v5.0
    • Cluster Scalability 2024-3-18, Cluster Scalability 2024-4-1
    • 120
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      In the case a failover occurs while the reshardingRecipientService is aborting but hasn't deleted its state document yet, we hit this invariant here on stepUp. (Check BF-32038 for more details)

      Reassess the behavior of the recipient during stepUp for this edge case.

            Assignee:
            Kruti Shah
            Reporter:
            Kruti Shah
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: