SERVER-87433 Handle failover behavior for resharding participant services during abort (#19695)

GitOrigin-RevId: 108ce5f363daec06c9062842935b402074610ccc