src/mongo/db/s/resharding/resharding_coordinator_observer_test.cpp
@@ -261,5 +261,46 @@ TEST_F(ReshardingCoordinatorObserverTest, onDonorsReportedMinFetchTimestamp) {
 
     reshardingObserver->interrupt(Status{ErrorCodes::Interrupted, "interrupted"});
 }
+
+TEST_F(ReshardingCoordinatorObserverTest, onAllParticipantsReportingAbortReason) {
+    auto reshardingObserver = std::make_shared<ReshardingCoordinatorObserver>();
+    auto futRecipient = reshardingObserver->awaitAllRecipientsDone();
+    auto futDonor = reshardingObserver->awaitAllDonorsDone();
+    ASSERT_FALSE(futRecipient.isReady());
+    ASSERT_FALSE(futDonor.isReady());
+
+    auto abortReason = Status{ErrorCodes::InternalError, "We gotta abort"};
+    auto abortReasonFromCoordinator =
+        Status{ErrorCodes::ReshardCollectionAborted, "Recieved abort from coordinator"};
+
+    auto recipientShards0 =
+        makeMockRecipientsInState(RecipientStateEnum::kAwaitingFetchTimestamp, Timestamp(1, 1));
+    std::vector<DonorShardEntry> donorShards0{
+        {resharding::makeDonorShard(
+            ShardId{"s1"}, DonorStateEnum::kError, Timestamp(1, 1), abortReason)},
+        {resharding::makeDonorShard(
+            ShardId{"s2"}, DonorStateEnum::kPreparingToDonate, Timestamp(1, 1))}};
+
+    auto coordinatorDoc0 =
+        makeCoordinatorDocWithRecipientsAndDonors(recipientShards0, donorShards0, abortReason);
+    reshardingObserver->onReshardingParticipantTransition(coordinatorDoc0);
+    ASSERT_FALSE(futRecipient.isReady());
+    ASSERT_FALSE(futDonor.isReady());
+
+    auto recipientShards1 = makeMockRecipientsInState(
+        RecipientStateEnum::kDone, Timestamp(1, 1), abortReasonFromCoordinator);
+    std::vector<DonorShardEntry> donorShards1{
+        {resharding::makeDonorShard(
+            ShardId{"s1"}, DonorStateEnum::kDone, Timestamp(1, 1), abortReason)},
+        {resharding::makeDonorShard(
+            ShardId{"s2"}, DonorStateEnum::kDone, Timestamp(1, 1), abortReasonFromCoordinator)}};
+
+    auto coordinatorDoc1 =
+        makeCoordinatorDocWithRecipientsAndDonors(recipientShards1, donorShards1, abortReason);
+    reshardingObserver->onReshardingParticipantTransition(coordinatorDoc1);
+    ASSERT_TRUE(futRecipient.isReady());
+    ASSERT_TRUE(futDonor.isReady());
+}
+
 }  // namespace
 }  // namespace mongo
